# learning_rust

./: LICENSE  README.md
accounting/: .env.example  Cargo.toml
accounting/src/: main.rs  proton_mail_bridge.rs
