[package]
name = "accounting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
async-trait = "0.1.79"
chrono = "0.4.35"
dotenvy = "0.15.7"
email-lib = "0.22.3"
mail-send = "*"
secret-lib = "0.3.3"
tokio = { version = "1.36.0", features = ["full"] }
log = "*"
env_logger = "0.11.3"

[dependencies.tokio-rustls]
version = "0.25.0"
