[package]
name = "accounting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1", default-features = false }
chrono = { version = "0.4", default-features = false }
dotenvy = { version = "0.15", default-features = false }
email-lib = { version = "0.24", default-features = false, features = ["imap", "maildir", "smtp"] }
env_logger = { version = "0.11", default-features = false }
log = { version = "0.4", default-features = false }
mail-builder = { version = "0.3", default-features = false }
secret-lib = { version = "*", default-features = false }
tokio = { version = "1", default-features = false }
